# amounts

./: MANIFEST.in  README.md  pyproject.toml
src/: amounts.py
src/amounts/: amounts.py  main.py
src/amounts/utils/: config.py  digit.py  file.py  fuzz.py  general.py  validate.py
