[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amounts"
version = "3.3"
authors = [{ name = "Ivan Sincek" }]
description = "Generate a wordlist to fuzz amounts or any other numerical values."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = ["argparse>=1.4.0"]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/amounts"

[project.scripts]
amounts = "amounts.amounts:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["wordlists/*.txt"]
