[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amounts"
version = "4.2"
authors = [{ name = "Ivan Sincek" }]
description = "Generate a wordlist to fuzz amounts or any other numerical values."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/amounts"

[project.scripts]
amounts = "amounts.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["wordlists/*.txt"]
